--- a/.github/workflows/generate-rules.yml
+++ b/.github/workflows/generate-rules.yml
@@ -28,6 +28,7 @@ jobs:
           echo "opencck_torrent=https://iplist.opencck.org/?format=text&data=domains&group=torrent" >> $GITHUB_ENV
           echo "opencck_tools=https://iplist.opencck.org/?format=text&data=domains&group=tools" >> $GITHUB_ENV
           echo "opencck_music=https://iplist.opencck.org/?format=text&data=domains&group=music" >> $GITHUB_ENV
+          echo "opencck_roblox=https://iplist.opencck.org/?format=text&data=domains&site=roblox.com" >> $GITHUB_ENV
         shell: bash
 
       - name: Checkout the main branch
@@ -114,6 +115,18 @@ jobs:
               echo "  - '+.${domain#www.}'" >> music.txt
             else
               echo "  - '+.${domain}'" >> music.txt
+            fi
+          done
+
+      - name: Generate roblox.txt file
+        run: |
+          echo "payload:" > roblox.txt
+          curl -sSL ${opencck_roblox} | grep -v '^#' | grep -v '^$' | while IFS= read -r domain; do
+            if [[ $domain =~ ^www\. ]]; then
+              echo "  - '${domain}'" >> roblox.txt
+              echo "  - '+.${domain#www.}'" >> roblox.txt
+            else
+              echo "  - '+.${domain}'" >> roblox.txt
             fi
           done
 
